--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
     "firebase": "^9.1.3",
     "react": "^17.0.2",
